--- a/src/app/app-shared/navbar/navbar.component.html
+++ b/src/app/app-shared/navbar/navbar.component.html
@@ -23,8 +23,13 @@
     </div>
 
     <ng-template #btnPlaceholder>
-      <button (click)="menu.toggle($event)" pButton pRipple type="button" icon="pi pi-ellipsis-v"
-              class="p-button-rounded custom-primary-button p-button-outlined">
+      <button (click)="menu.toggle($event)"
+              pButton
+              pRipple
+              type="button"
+              icon="pi pi-bars"
+              class="p-button-rounded custom-primary-button p-button-outlined p-button-lg"
+              style="font-size: 1.5rem;">
       </button>
     </ng-template>
   </div>
