add icon page print language field in single view fix on update session change app name

--- a/src/app/app-shared/navbar/navbar.component.html
+++ b/src/app/app-shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div>
     <a routerLink="/"
        class="p-py-3 p-px-2 app-title"
-    >Libros Swisher</a>
+    >Biblioteca Swisher</a>
   </div>
   <div>
     <p-menu
