--- a/src/app/pages/form-book/form-book.component.html
+++ b/src/app/pages/form-book/form-book.component.html
@@ -33,7 +33,7 @@
             (onSelect)="onUpload($event)"
             (onRemove)="removeFile()"
             accept="image/*"
-            maxFileSize="1000000"
+            maxFileSize="100000"
             [chooseLabel]="'Cargar imagen'"
             [cancelLabel]="'Remover imagen'"
             [chooseIcon]="'pi pi-upload'"
