--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -16,9 +16,8 @@
 }
 
 .card-img {
-  /*max-width: 230px;
-  */
   width: 100%;
+  max-height: 400px;
   height:  auto;
   border-radius: 3px 3px 0 0;
 }
