--- a/src/app/pages/form-book/form-book.component.html
+++ b/src/app/pages/form-book/form-book.component.html
@@ -49,7 +49,8 @@
               </div>
             </ng-template>
           </p-fileUpload>
-          <small *ngIf="this.hasSelectedImage() && this.form.touched && !this.book$" class="p-invalid">No haz cargado
+          <small *ngIf="this.hasSelectedImage() && this.form.touched && !this.book$" class="p-invalid"
+          >No haz cargado
             ninguna imagen.</small>
         </div>
       </div>
