--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -17,7 +17,7 @@
 
 .card-img {
   width: 100%;
-  max-height: 400px;
+  max-height: 190px;
   height:  auto;
   border-radius: 3px 3px 0 0;
 }
@@ -25,4 +25,15 @@
 .m-top {
   margin-top: 15rem;
 }
+
+@media (max-width: 576px) {
+
+  .card-img {
+    width: 100%;
+    max-height: 350px;
+    height:  auto;
+    border-radius: 3px 3px 0 0;
+  }
+}
+
 
