change the front ui

--- a/src/app/app-shared/navbar/navbar.component.css
+++ b/src/app/app-shared/navbar/navbar.component.css
@@ -1,1 +1,11 @@
+@media (max-width: 576px) {
+  .logo img {
+      max-width: 80px;
+  }
+
+  .app-title {
+    font-size: 1.2rem;
+    text-align: center;
+  }
+}
 
