--- a/src/app/app-shared/navbar/navbar.component.html
+++ b/src/app/app-shared/navbar/navbar.component.html
@@ -1,8 +1,10 @@
 <div class="bg-primary-color container p-d-flex p-flex-row p-jc-between p-py-md-3 p-py-1 p-ai-center">
-  <div>
+  <div class="p-d-flex p-ai-center logo">
+    <img src="assets/image/logo.svg" alt="logo">
     <a routerLink="/"
-       class="p-py-3 p-px-2 app-title"
-    >Biblioteca Swisher</a>
+       class="p-py-3 p-px-2 app-title">
+      Biblioteca de Nirka Reyes
+    </a>
   </div>
   <div>
     <p-menu
@@ -28,8 +30,8 @@
               pRipple
               type="button"
               icon="pi pi-bars"
-              class="p-button-rounded custom-primary-button p-button-outlined p-button-lg"
-              style="font-size: 1.5rem;">
+              class="p-button-rounded custom-primary-button p-button-outlined secondary-color p-button-lg"
+              style="font-size: 1.8rem;">
       </button>
     </ng-template>
   </div>
