--- a/src/app/app-shared/not-found/not-found.component.html
+++ b/src/app/app-shared/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="p-component animate__animated animate__fadeIn">
-  <h1 class="title p-text-center p-text-light p-mt-3">
+  <h1 class="title p-text-center secondary-color p-mt-3">
     <ng-content>
 
     </ng-content>
